--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
         <a href="https://www.tiktok.com/@diamond_vip23" class="link-button tiktok" target="_blank">
             TikTok
         </a>
-        <a href="https://www.roblox.com/share?code=7138badad068ca41bd8d106b3e71a8a5&type=Server" class="link-button roblox" target="_blank">
+<!--         <a href="https://www.roblox.com/share?code=7138badad068ca41bd8d106b3e71a8a5&type=Server" class="link-button roblox" target="_blank">
             Roblox Map
-        </a>
+        </a> -->
     </div>
 
     <script>
